# cs50

./: .devcontainer.json  .gitignore  CMakeLists.txt  README.md  hello.c  inheritance.c  lib.py  mario.c  readability.c  runoff.c
filter/: helpers.c
recover/: recover.c
week0/: Dog platformer.sb3
week1/: cash.c
week2/: scrabble.c  substitution.c
week3/: plurality.c  sort.txt
week4/volume/: volume.c
week5/speller/: .gitignore  dictionary.c
week6/: credit.py  hello.py  mario.py  readability.py
week6/dna/: dna.py
week7/songs/: 4.sql  6.sql  7.sql  8.sql  answers.txt
